styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

@layer base {
  body,
  html {
    @apply bg-white;
    @apply text-black;
    @apply dark:bg-black;
    @apply dark:text-neutral-100;
    @apply scroll-smooth;
  }
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
    Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

svg:focus, a:focus-visible {
  outline: none;
}

